2017-January-21 Struan Robertson

		* ConditionsManager.h/.cpp, System.h/.cpp, TMatrix.h	parallelManager.h, fitting.cpp: 
		Parallel output of the covariance matrix.

2017-January-17 Struan Robertson

		* CollisionOperator.cpp, ConditionsManager.cpp, main.cpp, error.h/.cpp, System.h, 
		parallelManager.h, fitting.cpp, Marquadt.cpp, FittingUtils.cpp: Addressed parallel 
		output issues by redirecting slaves to write to a null device. This change replaces 
		a number of others that have been wound back.

2017-January-15 Struan Robertson

		* CollisionOperator.cpp, ConditionsManager.cpp, AnalysisData.h, 
		main.cpp: More work on parallelizing analysis output (Average energies and populations).

2017-January-09 Struan Robertson

		* CollisionOperator.cpp, ConditionsManager.cpp, ParallelManager.h, AnalysisData.h, 
		main.cpp: More work on parallelizing analysis output (reaction rate coefficient data).

2016-December-30 Struan Robertson

		* CollisionOperator.h/.cpp, ConditionsManager.h/.cpp, ParallelManager.h, System.cpp, 
		main.cpp: Initial attempt at parallelizing analysis output.

2016-December-22 Struan Robertson

		* gDensityOfStates.cpp, DefindeDensityOfStates.cpp: Added a new density of states class
		that allows densities of states calculated outside of MESMER to be read in. 

2016-November-27 Struan Robertson

		* Documentation update.

		* Added Glyoxyl example.

2016-November-27 Struan Robertson

		* ConditionsManager.cpp/.h, System.cpp/.h: Moved XML writer methods from System 
		to ConditionsManager.

2016-November-23 Struan Robertson

		* Merge of MesmerMPI branch into trunk.

2016-November-22 Struan Robertson

		* FourierGrid1D.cpp: Updated prior to merge.

		* MesmerQA: Updated priort to merge.

2016-October-18 Struan Robertson

		* MesmerILT.cpp, Matrix.h, main.cpp: Minor error handling changes.

2016-October-16 Struan Robertson

		* FourierGrid1D.cpp: Initial outline implementation of the Fourier Grid methods for 